# ollama-chat-application

./: .env.example  .gitattributes  .gitignore  LEARN.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
notebook/: Ollama_Cloud.ipynb
public/: theme.json
src/database/: persistent_data_layer.py
src/document/: document_processor.py  processor_config.py
src/llm/: call_model.py  speech_to_text.py
src/log/: logger.py
src/ui/: chat_profiles.py  chat_resume.py  chat_starters.py
src/utils/: config.py
